{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 277,
  "lineage": "4341f9b8-85a5-075d-edaf-b8a2c7994060",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "wordpress-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "1000-3300",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-05T02:21:35.491-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wideops-avishay/global/firewalls/wordpress-firewall",
            "log_config": [],
            "name": "wordpress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/wideops-avishay/global/networks/default",
            "priority": 1000,
            "project": "wideops-avishay",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-avishay/global/firewalls/wordpress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.110.190.248",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-05T02:21:35.463-07:00",
            "id": "projects/wideops-avishay/global/addresses/global-ip1",
            "name": "global-ip1",
            "prefix_length": 0,
            "project": "wideops-avishay",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wideops-avishay/global/addresses/global-ip1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/ingress-wp1",
            "metadata": [
              {
                "annotations": {
                  "ingress.gcp.kubernetes.io/pre-shared-cert": "oday-cert3",
                  "kubernetes.io/ingress.allow-http": "true",
                  "kubernetes.io/ingress.class": "gce",
                  "kubernetes.io/ingress.global-static-ip-name": "global-ip1",
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "nginx.ingress.kubernetes.io/configuration-snippet": "        location /wp-login.php {\n            auth_request /iap;\n            auth_request_set $cookie_iap_tunnel $upstream_http_set_cookie;\n            iap_tunnel_cookie_policy all;\n                }\n",
                  "nginx.ingress.kubernetes.io/force-ssl-redirect": "true",
                  "nginx.ingress.kubernetes.io/from-to-www-redirect": "true",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress-wp1",
                "namespace": "default",
                "resource_version": "24894",
                "uid": "8b5e6a90-b09e-4626-89c4-a31296d2487d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "oday.ddns.net",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "service-wp1",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/wp-admin/*",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "service-wp1",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.110.190.248"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_global_address.default",
            "google_compute_managed_ssl_certificate.cert",
            "google_container_cluster.cluster",
            "google_container_node_pool.node_pool",
            "google_service_account.default",
            "google_sql_database_instance.instance",
            "kubernetes_deployment.wordpress",
            "kubernetes_service_v1.wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/service-wp1",
            "metadata": [
              {
                "generation": 0,
                "name": "service-wp1",
                "namespace": "default",
                "resource_version": "6219",
                "uid": "27527519-49f9-438a-8af0-df80c9f929a8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.3.242.15",
                "cluster_ips": [
                  "10.3.242.15"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32155,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wordpress"
                },
                "session_affinity": "ClientIP",
                "session_affinity_config": [
                  {
                    "client_ip": [
                      {
                        "timeout_seconds": 10800
                      }
                    ]
                  }
                ],
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_container_cluster.cluster",
            "google_container_node_pool.node_pool",
            "google_service_account.default",
            "google_sql_database_instance.instance",
            "kubernetes_deployment.wordpress"
          ]
        }
      ]
    }
  ]
}